# task_manager

./: LICENSE  README.md  pyproject.toml
backend/api/: serializers.py  urls.py  views.py
backend/applications/: documents.py  enums.py  models.py  tasks.py
backend/core/: asgi.py  settings.py  wsgi.py
backend/exceptions/: apps.py  base.py
backend/tasks/: enums.py  models.py
fixtures/: applications.json
infra/: .env.example  2engine.postman_collection.json  Dockerfile  Dockerfile_backend  docker-compose.yaml  docker-entrypoint.sh
